--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=926293');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=3520407710');
       });
     }
   </script>
-  <script src="main.dart.js?v=926293" type="application/javascript"></script>
+  <script src="main.dart.js?v=3520407710" type="application/javascript"></script>
 </body>
 </html>
