--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="icons/favicon2.png"/>
 
-  <title>anakonProject</title>
+  <title>АНАКОН</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
@@ -24,10 +24,10 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=362528684');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=108810505');
       });
     }
   </script>
-  <script src="main.dart.js?v=362528684" type="application/javascript"></script>
+  <script src="main.dart.js?v=108810505" type="application/javascript"></script>
 </body>
 </html>
