--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=3762837384');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=3678904083');
       });
     }
   </script>
-  <script src="main.dart.js?v=3762837384" type="application/javascript"></script>
+  <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
