--- a/index.html
+++ b/index.html
@@ -11,32 +11,32 @@
 
 
     <title>Anakon</title>
-    <link rel="preload" href="assets/images/blur.jpg" as="fetch" crossorigin>
-    <link rel="preload" href="assets/images/blur_for_bs.jpg" as="fetch" crossorigin>
-    <link rel="preload" href="assets/images/blur_horizontal.png" as="fetch" crossorigin>
-    <link rel="preload" href="assets/images/effective.jpg" as="fetch" crossorigin>
-    <link rel="preload" href="assets/images/experience.jpg" as="fetch" crossorigin>
-    <link rel="preload" href="assets/images/facture1.png" as="fetch" crossorigin>
-    <link rel="preload" href="assets/images/individuality.jpg" as="fetch" crossorigin>
-    <link rel="preload" href="assets/images/logo_appbar.png" as="fetch" crossorigin>
-    <link rel="preload" href="assets/images/logo_appbar_1.png" as="fetch" crossorigin>
-    <link rel="preload" href="assets/images/logo_menu.png" as="fetch" crossorigin>
-    <link rel="preload" href="assets/images/logo_on_tower.png" as="fetch" crossorigin>
-    <link rel="preload" href="assets/images/null.png" as="fetch" crossorigin>
-    <link rel="preload" href="assets/images/online_support.jpg" as="fetch" crossorigin>
-    <link rel="preload" href="assets/images/outstaffing.jpg" as="fetch" crossorigin>
-    <link rel="preload" href="assets/images/personal_engineer.jpg" as="fetch" crossorigin>
-    <link rel="preload" href="assets/images/unique.jpg" as="fetch" crossorigin>
-    <link rel="preload" href="assets/video/tower.m4v" as="fetch" crossorigin>
-    <link rel="preload" href="assets/video/tower.mp4" as="fetch" crossorigin>
-    <link rel="preload" href="assets/video/tower_horizontal.gif" as="fetch" crossorigin>
-    <link rel="preload" href="assets/video/tower_old.mp4" as="fetch" crossorigin>
+    <link rel="preload" href="assets/images/blur.jpg" as="image" crossorigin>
+    <link rel="preload" href="assets/images/blur_for_bs.jpg" as="image" crossorigin>
+    <link rel="preload" href="assets/images/blur_horizontal.png" as="image" crossorigin>
+    <link rel="preload" href="assets/images/effective.jpg" as="image">
+    <link rel="preload" href="assets/images/experience.jpg" as="image">
+    <link rel="preload" href="assets/images/facture1.png" as="image" crossorigin>
+    <link rel="preload" href="assets/images/individuality.jpg" as="image" crossorigin>
+    <link rel="preload" href="assets/images/logo_appbar.png" as="image" >
+    <link rel="preload" href="assets/images/logo_appbar_1.png" as="image" >
+    <link rel="preload" href="assets/images/logo_menu.png" as="image" >
+    <link rel="preload" href="assets/images/logo_on_tower.png" as="image" crossorigin>
+    <link rel="preload" href="assets/images/null.png" as="image" >
+    <link rel="preload" href="assets/images/online_support.jpg" as="image" crossorigin>
+    <link rel="preload" href="assets/images/outstaffing.jpg" as="image" crossorigin>
+    <link rel="preload" href="assets/images/personal_engineer.jpg" as="image" crossorigin>
+    <link rel="preload" href="assets/images/unique.jpg" as="image" crossorigin>
+    <link rel="preload" href="assets/video/tower.m4v" as="video" crossorigin>
+    <link rel="preload" href="assets/video/tower.mp4" as="video">
+    <link rel="preload" href="assets/video/tower_horizontal.gif" as="image" crossorigin>
+    <link rel="preload" href="assets/video/tower_old.mp4" as="video" crossorigin>
     <link rel="preload" href="fonts/Poppins-Bold.ttf" as="font" crossorigin>
     <link rel="preload" href="fonts/Poppins.ttf" as="font" crossorigin>
-    <link rel="preload" href="icons/favicon.png" as="fetch" crossorigin>
-    <link rel="preload" href="icons/favicon1.png" as="fetch" crossorigin>
-    <link rel="preload" href="icons/favicon2.png" as="fetch" crossorigin>
-    <link rel="preload" href="manifest.json" as="fetch" crossorigin>
+    <link rel="preload" href="icons/favicon.png" as="image" crossorigin>
+    <link rel="preload" href="icons/favicon1.png" as="image" crossorigin>
+    <link rel="preload" href="icons/favicon2.png" as="image" crossorigin>
+    <link rel="preload" href="manifest.json" as="image" crossorigin>
     <link rel="manifest" href="manifest.json">
 
     <style>
@@ -146,7 +146,7 @@
 <script>
     if ('serviceWorker' in navigator) {
         window.addEventListener('load', function () {
-            navigator.serviceWorker.register('flutter_service_worker.js?v=3244560589');
+            navigator.serviceWorker.register('flutter_service_worker.js?v=3892686545');
         });
     }
 </script>
