--- a/index.html
+++ b/index.html
@@ -11,32 +11,29 @@
 
 
     <title>Anakon</title>
-    <link rel="preload" href="assets/images/blur.jpg" as="image" crossorigin>
-    <link rel="preload" href="assets/images/blur_for_bs.jpg" as="image" crossorigin>
-    <link rel="preload" href="assets/images/blur_horizontal.png" as="image" crossorigin>
+    <link rel="preload" href="assets/images/blur.jpg" as="image">
+    <link rel="preload" href="assets/images/blur_for_bs.jpg" as="image">
+    <link rel="preload" href="assets/images/blur_horizontal.png" as="image">
     <link rel="preload" href="assets/images/effective.jpg" as="image">
     <link rel="preload" href="assets/images/experience.jpg" as="image">
-    <link rel="preload" href="assets/images/facture1.png" as="image" crossorigin>
-    <link rel="preload" href="assets/images/individuality.jpg" as="image" crossorigin>
-    <link rel="preload" href="assets/images/logo_appbar.png" as="image" >
-    <link rel="preload" href="assets/images/logo_appbar_1.png" as="image" >
-    <link rel="preload" href="assets/images/logo_menu.png" as="image" >
-    <link rel="preload" href="assets/images/logo_on_tower.png" as="image" crossorigin>
-    <link rel="preload" href="assets/images/null.png" as="image" >
-    <link rel="preload" href="assets/images/online_support.jpg" as="image" crossorigin>
-    <link rel="preload" href="assets/images/outstaffing.jpg" as="image" crossorigin>
-    <link rel="preload" href="assets/images/personal_engineer.jpg" as="image" crossorigin>
-    <link rel="preload" href="assets/images/unique.jpg" as="image" crossorigin>
-    <link rel="preload" href="assets/video/tower.m4v" as="video" crossorigin>
+    <link rel="preload" href="assets/images/facture1.png" as="image">
+    <link rel="preload" href="assets/images/individuality.jpg" as="image">
+    <link rel="preload" href="assets/images/logo_appbar.png" as="image">
+    <link rel="preload" href="assets/images/logo_appbar_1.png" as="image">
+    <link rel="preload" href="assets/images/logo_menu.png" as="image">
+    <link rel="preload" href="assets/images/logo_on_tower.png" as="image">
+    <link rel="preload" href="assets/images/null.png" as="image">
+    <link rel="preload" href="assets/images/online_support.jpg" as="image">
+    <link rel="preload" href="assets/images/outstaffing.jpg" as="image">
+    <link rel="preload" href="assets/images/personal_engineer.jpg" as="image">
+    <link rel="preload" href="assets/images/unique.jpg" as="image">
     <link rel="preload" href="assets/video/tower.mp4" as="video">
-    <link rel="preload" href="assets/video/tower_horizontal.gif" as="image" crossorigin>
-    <link rel="preload" href="assets/video/tower_old.mp4" as="video" crossorigin>
-    <link rel="preload" href="fonts/Poppins-Bold.ttf" as="font" crossorigin>
-    <link rel="preload" href="fonts/Poppins.ttf" as="font" crossorigin>
-    <link rel="preload" href="icons/favicon.png" as="image" crossorigin>
-    <link rel="preload" href="icons/favicon1.png" as="image" crossorigin>
-    <link rel="preload" href="icons/favicon2.png" as="image" crossorigin>
-    <link rel="preload" href="manifest.json" as="image" crossorigin>
+    <link rel="preload" href="fonts/Poppins-Bold.ttf" as="font">
+    <link rel="preload" href="fonts/Poppins.ttf" as="font">
+    <link rel="preload" href="icons/favicon.png" as="image">
+    <link rel="preload" href="icons/favicon1.png" as="image">
+    <link rel="preload" href="icons/favicon2.png" as="image">
+    <link rel="preload" href="manifest.json" as="image">
     <link rel="manifest" href="manifest.json">
 
     <style>
@@ -51,7 +48,7 @@
             position: absolute;
             margin-top: 500px;
             color: #06285A;
-            animation: text-focus-in 10s infinite alternate;
+            animation: text-focus-in 3s infinite alternate;
             font-family: Tahoma;
             font-weight: normal;
         }
@@ -62,7 +59,7 @@
         }
 
         .animation {
-            animation: scale-up-center 10s infinite alternate;
+            animation: scale-up-center 1s infinite alternate;
         }
 
         .image-flex {
@@ -131,7 +128,7 @@
 </head>
 <body>
 
-<div class="image-wrap image-flex ">
+<div class="image-wrap image-flex">
     <p>
         <img class="animation" src="assets/images/logo_menu.png">
     </p>
@@ -146,7 +143,7 @@
 <script>
     if ('serviceWorker' in navigator) {
         window.addEventListener('load', function () {
-            navigator.serviceWorker.register('flutter_service_worker.js?v=2147742902');
+            navigator.serviceWorker.register('flutter_service_worker.js?v=2984192496');
         });
     }
 </script>
