--- a/index.html
+++ b/index.html
@@ -11,28 +11,29 @@
 
 
     <title>Anakon</title>
-    <link rel="preload" href="assets/images/blur.jpg" as="image" crossorigin="anonymous">
-    <link rel="preload" href="assets/images/blur_for_bs.jpg" as="image" crossorigin="anonymous">
-    <link rel="preload" href="assets/images/blur_horizontal.png" as="image" crossorigin="anonymous">
-    <link rel="preload" href="assets/images/effective.jpg" as="image" crossorigin="anonymous">
-    <link rel="preload" href="assets/images/experience.jpg" as="image" crossorigin="anonymous">
-    <link rel="preload" href="assets/images/facture1.png" as="image" crossorigin="anonymous">
-    <link rel="preload" href="assets/images/individuality.jpg" as="image" crossorigin="anonymous">
-    <link rel="preload" href="assets/images/logo_appbar.png" as="image" crossorigin="anonymous">
-    <link rel="preload" href="assets/images/logo_appbar_1.png" as="image" crossorigin="anonymous">
-    <link rel="preload" href="assets/images/logo_menu.png" as="image" crossorigin="anonymous">
-    <link rel="preload" href="assets/images/logo_on_tower.png" as="image" crossorigin="anonymous">
-    <link rel="preload" href="assets/images/null.png" as="image" crossorigin="anonymous">
-    <link rel="preload" href="assets/images/online_support.jpg" as="image" crossorigin="anonymous">
-    <link rel="preload" href="assets/images/outstaffing.jpg" as="image" crossorigin="anonymous">
-    <link rel="preload" href="assets/images/personal_engineer.jpg" as="image" crossorigin="anonymous">
-    <link rel="preload" href="assets/images/unique.jpg" as="image" crossorigin="anonymous">
-    <link rel="preload" href="assets/video/tower.mp4" as="video" crossorigin="anonymous">
-    <link rel="preload" href="fonts/Poppins-Bold.ttf" as="font" crossorigin="anonymous">
-    <link rel="preload" href="fonts/Poppins.ttf" as="font" crossorigin="anonymous">
-    <link rel="preload" href="icons/favicon.png" as="image" crossorigin="anonymous">
-    <link rel="preload" href="icons/favicon1.png" as="image" crossorigin="anonymous">
-    <link rel="preload" href="icons/favicon2.png" as="image" crossorigin="anonymous">
+    <link rel="preload" href="assets/images/blur.jpg" as="image" >
+    <link rel="preload" href="assets/images/blur_for_bs.jpg" as="image" >
+    <link rel="preload" href="assets/images/blur_horizontal.png" as="image"  >
+    <link rel="preload" href="assets/images/effective.jpg" as="image"  >
+    <link rel="preload" href="assets/images/experience.jpg" as="image"  >
+    <link rel="preload" href="assets/images/facture1.png" as="image"  >
+    <link rel="preload" href="assets/images/individuality.jpg" as="image"  >
+    <link rel="preload" href="assets/images/logo_appbar.png" as="image"  >
+    <link rel="preload" href="assets/images/logo_appbar_1.png" as="image"  >
+    <link rel="preload" href="assets/images/logo_menu.png" as="image"  >
+    <link rel="preload" href="assets/images/logo_on_tower.png" as="image"  >
+    <link rel="preload" href="assets/images/null.png" as="image"  >
+    <link rel="preload" href="assets/images/online_support.jpg" as="image"  >
+    <link rel="preload" href="assets/images/outstaffing.jpg" as="image"  >
+    <link rel="preload" href="assets/images/personal_engineer.jpg" as="image"  >
+    <link rel="preload" href="assets/images/unique.jpg" as="image"  >
+    <link rel="preload" href="assets/video/tower.mp4" as="video"  >
+    <link rel="preload" href="assets/video/tower_mobile.mp4" as="video"  >
+    <link rel="preload" href="fonts/Poppins-Bold.ttf" as="font"  >
+    <link rel="preload" href="fonts/Poppins.ttf" as="font"  >
+    <link rel="preload" href="icons/favicon.png" as="image"  >
+    <link rel="preload" href="icons/favicon1.png" as="image"  >
+    <link rel="preload" href="icons/favicon2.png" as="image"  >
     <link rel="preload" href="manifest.json" as="document">
     <link rel="manifest" href="manifest.json" as="document">
 
@@ -143,7 +144,7 @@
 <script>
     if ('serviceWorker' in navigator) {
         window.addEventListener('load', function () {
-            navigator.serviceWorker.register('flutter_service_worker.js?v=4083635777');
+            navigator.serviceWorker.register('flutter_service_worker.js?v=377195655');
         });
     }
 </script>
