--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="preload" href="assets/images/personal_engineer.jpg" as="image"  >
     <link rel="preload" href="assets/images/unique.jpg" as="image"  >
     <link rel="preload" href="assets/video/tower.mp4" as="video"  >
+    <link rel="preload" href="assets/video/tower_mobile_short.mp4" as="video"  >
     <link rel="preload" href="assets/video/tower_horizontal.mp4" as="video"  >
     <link rel="preload" href="fonts/Poppins-Bold.ttf" as="font"  >
     <link rel="preload" href="fonts/Poppins.ttf" as="font"  >
@@ -142,7 +143,7 @@
 <script>
     if ('serviceWorker' in navigator) {
         window.addEventListener('load', function () {
-            navigator.serviceWorker.register('flutter_service_worker.js?v=1662886663');
+            navigator.serviceWorker.register('flutter_service_worker.js?v=1676702930');
         });
     }
 </script>
