--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <link rel="preload" href="assets/images/unique.jpg" as="image"  >
     <link rel="preload" href="assets/video/tower.mp4" as="video"  >
     <link rel="preload" href="assets/video/tower_mobile.mp4" as="video"  >
+    <link rel="preload" href="assets/video/tower_check.mp4" as="video"  >
     <link rel="preload" href="fonts/Poppins-Bold.ttf" as="font"  >
     <link rel="preload" href="fonts/Poppins.ttf" as="font"  >
     <link rel="preload" href="icons/favicon.png" as="image"  >
@@ -142,7 +143,7 @@
 <script>
     if ('serviceWorker' in navigator) {
         window.addEventListener('load', function () {
-            navigator.serviceWorker.register('flutter_service_worker.js?v=2500666942');
+            navigator.serviceWorker.register('flutter_service_worker.js?v=1352371259');
         });
     }
 </script>
