--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="apple-mobile-web-app-title" content="Anakon">
 
 
-    <title>Anakon</title>
+    <title>АНАКОН</title>
     <link rel="preload" href="assets/images/blur.jpg" as="image" >
     <link rel="preload" href="assets/images/blur_for_bs.jpg" as="image" >
     <link rel="preload" href="assets/images/blur_horizontal.png" as="image"  >
@@ -219,7 +219,7 @@
 <script>
     if ('serviceWorker' in navigator) {
         window.addEventListener('load', function () {
-            navigator.serviceWorker.register('flutter_service_worker.js?v=4228922557');
+            navigator.serviceWorker.register('flutter_service_worker.js?v=1381074770');
         });
     }
 </script>
