--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
 
 <p class="p-white">
-    +375 (33) 354-76-45
+    +375-44-570-57-57
     КОМПЛЕКСНОЕ УПРАВЛЕНИЕ НЕДВИЖИМЫМ ИМУЩЕСВТОМ
     НАШИ ПРЕИМУЩЕСТВА
     ОПЫТ
@@ -216,7 +216,7 @@
 <script>
     if ('serviceWorker' in navigator) {
         window.addEventListener('load', function () {
-            navigator.serviceWorker.register('flutter_service_worker.js?v=2321174528');
+            navigator.serviceWorker.register('flutter_service_worker.js');
         });
     }
 </script>
